# student-of-games

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_graph.sh  main.cpp
src/: netHolder.cpp  netHolder.h  settings.cpp  settings.h
src/game/: dealer.cpp  dealer.h  equity.cpp  equity.h  equityCache.cpp  equityCache.h  gameState.cpp  gameState.h  handComp.cpp  handComp.h
src/nn/: dataGenerator.cpp  dataGenerator.h  dataSaver.cpp  dataSaver.h  inference.cpp  inference.h  net.cpp  net.h  netHelper.cpp  netHelper.h  situationSolver.cpp  situationSolver.h  trainer.cpp  trainer.h
src/solving/: continualResolving.cpp  continualResolving.h  deepResolving.cpp  deepResolving.h  pbscfr.cpp  pbscfr.h
src/tree/: exploitability.cpp  exploitability.h  resolvingStrategyFilling.cpp  resolvingStrategyFilling.h  treeBuilder.cpp  treeBuilder.h  treeutils.cpp  treeutils.h
src/utils/: card.cpp  card.h  publicBeliefState.cpp  publicBeliefState.h  utils.cpp  utils.h  visualizeTree.h
